--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,12 +240,37 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#background-video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  filter: brightness(.7);
+}
+
 #hero {
   width: 100%;
   height: 100vh;
   /* background: url("https://www.thegameassembly.com/wp-content/uploads/2020/09/sp20eliarnning.jpg") top right no-repeat; */
   background-size: contain;
   position: relative;
+  text-shadow: #000407 2px 2px;
+}
+#hero a {
+  text-shadow: none;
+  background-color: #EDB51833;
+  font-weight: 500;
+  font-size: 22px;
+  margin-top: 20px !important;
+  text-shadow: #333333aa 1px 1px;
+}
+#hero a:hover {
+  text-shadow: none;
 }
 @media (min-width: 992px) {
   #hero {
@@ -315,7 +340,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   margin: 0;
   padding: 0;
-  z-index: 0;
+  z-index: -2;
   background: #79031D;
 }
 
@@ -1266,6 +1291,7 @@ section {
   font-weight: 700;
   position: relative;
   font-family: "Inter", sans-serif;
+  font-weight: 400;
   padding: 0;
   margin: 0 0 15px 0;
   color: #EDB518;
