--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #;
+  background: #EDB518;
 }
 
 #preloader:before {
@@ -128,8 +128,8 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #08D9D6;
-    border-right: 1px solid #e6e9ec;
+    background: #EDB518;
+    border-right: 1px solid #EAEAEA;
     left: -300px;
   }
 }
@@ -234,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #EDB518;
 }
 
 /*--------------------------------------------------------------
@@ -244,7 +244,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   top: 0;
@@ -335,7 +335,7 @@ h1, h2, h3, h4, h5, h6 {
 .area{
   width: 100%;
   height:100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   margin: 0;
@@ -584,6 +584,113 @@ border-radius: 500px;
 button {
   margin-top: 20px;
 }
+
+/* Games */
+#toysrsus {
+  width: 100%;
+  height: auto;
+  /*background: url("https://placekitten.com/700/700") top right no-repeat;*/
+  background-size: cover;
+  position: relative;
+  text-align: left;
+  overflow: hidden;
+}
+
+@media (min-width: 992px) {
+  #toysrsus {
+    padding-left: 160px;
+    padding-right: 160px;
+  }
+  .toysrsus-video-mobile {
+    display: none;
+  }
+  .toysrsus-video-desktop {
+    display: default;
+    padding: 0 !important;
+  }
+  .toysrsus-video {
+  width: 40vw;
+  margin-right: 5px !important;
+}
+.toysrsus-video-mobile, .toysrsus-video-desktop {
+  text-align: right;
+}
+}
+
+
+.toysrsus-video {
+  height: auto; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 0; margin-right: 0;
+}
+.dividisor {
+  border: 2px solid #EDB518;
+  width: auto;
+  border-radius: 10px;
+}
+#toysrsus:before {
+  content: "";
+  background: #79031D33;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+video {
+  display: inline-block;
+  margin-left: auto;
+}
+#toysrsus h1 {
+  margin: 0;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #EDB518;
+}
+#toysrsus p {
+  color: #EAEAEA;
+  margin: 15px 0 0 0;
+  font-size: 20px;
+  font-family: "Inter", sans-serif;
+}
+#toysrsus p span {
+  color: #FF2E63;
+  letter-spacing: 1px;
+}
+#toysrsus table {
+  margin-top: 50px;
+}
+#toysrsus h3 {
+  font-family: "Inter", sans-serif;
+  color: #EAEAEA;
+}
+#toysrsus ul li {
+  font-family: "Inter", sans-serif;
+  color: #EAEAEA;
+}
+
+@media (max-width: 992px) {
+  #toysrsus {
+    text-align: center;
+  }
+  
+  #toysrsus h1 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+  #toysrsus p {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .toysrsus-video-mobile {
+    display: default;
+  }
+  .toysrsus-video-desktop {
+    display: none;
+  }
+  .toysrsus-video {
+  width: 90vw;
+}}
 
 /*--------------------------------------------------------------
 # Sections General
