--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,14 +719,26 @@ video {
 #contact-and-about-bg {
   background: url("../img/Poster.PNG") top right no-repeat;
   background-size: cover;
+  height: auto;
+  min-height: 100vh;
+}
+#contact-and-about-cover {
+  background-color: #79031Dcc;
+  height: auto;
+  min-height: 100vh;
 }
 
 /* About */
+@media (min-width: 992px) {
+  #about {
+    padding-left: 160px;
+    padding-right: 160px;
+  }
+}
 #about {
   width: 100%;
-  height: auto;
+  height: 100%;
   font-family: "Inter", sans-serif;
-  background-color: #79031Dcc;
 }
 #about h1 {
   font-size: 64px;
@@ -738,21 +750,22 @@ video {
 }
 
 #about-me-bread {
-  width: 50%;
+  width: auto;
   font-size: 18px;
   color: #eaeaea;
+  padding: 10px;
 }
 #portrait {
-  width: 50%;
-  padding: 10px;
+  width: 33vw;
+  padding-left: 10px;
+  padding-right: 10px;
   display: inline-block;
 }
 
 /* Contact */
 #contact {
   width: 100%;
-  height: auto;
-  background-color: #79031Dcc;
+  height: 100%;
   font-family: "Inter", sans-serif;
   text-align: center;
 }
