--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Dosis", sans-serif;
   color: #EAEAEA;
@@ -784,7 +788,7 @@ video {
 #contact p {
   font-size: 20px;
 }
-#contact a {
+#contact a, #about a {
   color: #EAEAEA;
   text-decoration: underline;
 }
