--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 18px;
   margin-bottom: 8px;
   transition: 0.3s;
-  font-size: 15px;
+  font-size: 17px;
   border-radius: 50px;
   background: #F5F7F7;
   height: 56px;
@@ -535,7 +535,7 @@ border-radius: 500px;
 #editor {
   width: 100%;
   height: 60vh;
-  background: url("https://placekitten.com/500/500") top right no-repeat;
+  background: url("../../assets/img/editor.PNG") top right no-repeat;
   background-size: cover;
   position: relative;
   text-align: left;
