--- a/assets/css/article-lightbox.css
+++ b/assets/css/article-lightbox.css
@@ -11,6 +11,15 @@ body {
     background-color: #EAEAEA;
 }
 
+@media (max-width: 992px) {
+    body {
+      width: 100vw;
+    }
+    td {
+        display: block;
+    }
+  }
+
 h1 {
     font-size: 64px;
     font-weight: 700;
@@ -26,7 +35,7 @@ h1 {
   margin-top: 17px;
 }
 
-#article img {
+#article .a-img {
     width: 70vw;
     height: auto;
     display: inline-block;
@@ -40,4 +49,19 @@ h1 {
 .article-img-container {
     text-align: center;
     padding: 17px;
+}
+
+table {
+    text-align: center;
+    width: 100%;
+}
+tr {
+    display: inline-block;
+}
+code {
+    text-align: left;
+}
+
+video {
+    max-width: 100%;
 }
