--- a/assets/css/article-lightbox.css
+++ b/assets/css/article-lightbox.css
@@ -11,15 +11,6 @@ body {
     background-color: #EAEAEA;
 }
 
-@media (max-width: 992px) {
-    body {
-      width: 100vw;
-    }
-    td {
-        display: block;
-    }
-  }
-
 h1 {
     font-size: 64px;
     font-weight: 700;
@@ -35,11 +26,10 @@ h1 {
   margin-top: 17px;
 }
 
-#article .a-img {
+#article img {
     width: 70vw;
     height: auto;
     display: inline-block;
-    max-width: 1140px;
 }
 
 #article h3 {
@@ -50,19 +40,4 @@ h1 {
 .article-img-container {
     text-align: center;
     padding: 17px;
-}
-
-table {
-    text-align: center;
-    width: 100%;
-}
-tr {
-    display: inline-block;
-}
-code {
-    text-align: left;
-}
-
-video {
-    max-width: 100%;
 }
